tests/rosetta/out/Swift/array-concatenation.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:04Z
func concatInts(_ a: [Int], _ b: [Int]) -> [Int] {
    var out: [Int] = [Any]()
    for v in a {
        out = out + [v]
    }
    for v in b {
        out = out + [v]
    }
    return out
}
func concatAny(_ a: [any], _ b: [any]) -> [any] {
    var out: [any] = [Any]()
    for v in a {
        out = out + [v]
    }
    for v in b {
        out = out + [v]
    }
    return out
}
var a = [1, 2, 3]
var b = [7, 12, 60]
print(String(concatInts(a, b)))
var i: [any] = [1, 2, 3]
var j: [any] = ["Crosby", "Stills", "Nash", "Young"]
print(String(concatAny(i, j)))
var l = [1, 2, 3]
var m = [7, 12, 60]
print(String(concatInts(l, m)))
